5#. Soluciono bug, width overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -121,6 +121,10 @@ a {
 
 /* Fin Card */
 
+.width-max {
+    width: 100vw;
+}
+
 /* Iconos */
 div i {
     /* height: 1rem !important; */
